--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ToDo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <h2>新規タスクの追加</h2>
     <input type="text" id="addText">
     <button id="addBtn">追加</button>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
